--- a/Formulary.html
+++ b/Formulary.html
@@ -5,27 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de Contato</title>
+    <title>Contact Formulary</title>
 </head>
 <body>
     <div>
         <form action="">
     <fieldset>
-        <legend>Contato</legend>
+        <legend>Contact</legend>
 
-        <label for="namefield">Nome</label>
-        <input id="namefield" type="Value" placeholder="Insira seu Nome Completo">
+        <label for="namefield">Name</label>
+        <input id="namefield" type="Value" placeholder="Insert Your Name Here">
         <br>
         <br>
-        <label for="mail">E-mail</label>
-        <input id="mail" type="email" placeholder="Insira um E-mail de Contato">
+        <label for="mail">Email</label>
+        <input id="mail" type="email" placeholder="Insert a Contact Email">
         <br>
         <br>
-        <label for="textbox">Texto</label>
+        <label for="textbox">Tell About You</label>
         <textarea name="texto" id="textbox" cols="30" rows="10"></textarea>
         <br>
         <br>
-        <button>Enviar</button>
+        <button>Send</button>
     </div>
     </fieldset>
 </form>
